(Importante) Generado DTOs para GET / POST
Se arreglaron y/o generaron DTO's para ver carrito, ver productos, crear categoría, checkout del carrito y crear producto