@@ -4,10 +4,12 @@ import java.util.stream.Collectors;
 
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-
+import java.util.List;
 import com.uade.tpo.demo.entity.Order;
 import com.uade.tpo.demo.entity.dto.CheckoutResponse;
+import com.uade.tpo.demo.entity.dto.OrderSummaryResponse;
 import com.uade.tpo.demo.service.OrderService;
+import com.uade.tpo.demo.service.CartService;
 
 import lombok.RequiredArgsConstructor;
 
@@ -17,11 +19,11 @@ import lombok.RequiredArgsConstructor;
 public class OrderController {
 
     private final OrderService orderService;
+    private final CartService cartService;
 
     @PostMapping("/checkout")
-    public ResponseEntity<CheckoutResponse> checkout(@RequestParam Long userId) {
-        Order o = orderService.checkout(userId);
-        return ResponseEntity.ok(new CheckoutResponse(o.getId(), o.getTotal(), o.getStatus().name()));
+    public ResponseEntity<CheckoutResponse> checkout(@PathVariable Long userId) {
+    return ResponseEntity.ok(cartService.checkout(userId));
     }
 
     @GetMapping("/{id}")
@@ -30,11 +32,15 @@ public class OrderController {
     }
 
     @GetMapping("/mine")
-    public ResponseEntity<?> listMine(@RequestParam Long userId) {
-        return ResponseEntity.ok(
-            orderService.listByUser(userId).stream()
-                .map(o -> new CheckoutResponse(o.getId(), o.getTotal(), o.getStatus().name()))
-                .collect(Collectors.toList())
-        );
-    }
+public ResponseEntity<List<OrderSummaryResponse>> listMine(@RequestParam Long userId) {
+    return ResponseEntity.ok(
+        orderService.listByUser(userId).stream()
+            .map(o -> new OrderSummaryResponse(
+                o.getId(),
+                o.getTotal(),
+                o.getStatus().name()
+            ))
+            .toList()
+    );
+}
 }
